backend/infra/k8s-dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.localdev.me
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: apigateway-srv
                port:
                  number: 3000
